@@ -85,11 +85,13 @@ double rgamma(double a, double scale)
 
     double e, p, q, r, t, u, v, w, x, ret_val;
 
-    if (!R_FINITE(a) || !R_FINITE(scale) || a <= 0.0 || scale <= 0.0)
+    if (!R_FINITE(a) || !R_FINITE(scale) || a < 0.0 || scale <= 0.0)
         ML_ERR_return_NAN;
 
     if (a < 1.)
     { /* GS algorithm for parameters a < 1 */
+        if (a == 0)
+            return 0.;
         e = 1.0 + exp_m1 * a;
         repeat
         {
